# freescuba

./: .gitignore  .gitmodules  CMakeLists.txt  GenWin64.bat  LICENSE  README.md  manifest.vrmanifest
driver_freescuba/: driver.vrdrivermanifest
driver_freescuba/resources/: driver.vrresources
driver_freescuba/resources/input/: contactgloves_controller_remapping.json  free_scuba_profile.json
driver_freescuba/resources/input/bindings/: legacy_bindings_contactgloves.json  openvr.component.vrcompositor_contact_glove.json  openvr.tool.steamvr_environments_contact_glove.json  steam.app.250820_contact_glove.json
driver_freescuba/resources/settings/: default.vrsettings
src/: CMakeLists.txt  ipc_protocol.hpp
src/openvr_driver/: CMakeLists.txt  contactglove_device.cpp  contactglove_device.hpp  device_provider.cpp  device_provider.hpp  driverlog.cpp  driverlog.hpp  hand_simulation.cpp  hand_simulation.hpp  hmd_driver_factory.cpp  hooking.cpp  hooking.hpp  interface_hook_injector.cpp  interface_hook_injector.hpp  ipc_server.cpp  ipc_server.hpp  maths.cpp  maths.hpp
src/openvr_overlay/: CMakeLists.txt  app_state.cpp  app_state.hpp  configuration.cpp  configuration.hpp  free_scuba_resources.rc  imgui_extensions.cpp  imgui_extensions.hpp  ipc_client.cpp  ipc_client.hpp  main.cpp  maths.cpp  maths.hpp  one_euro_filter.cpp  one_euro_filter.hpp  overlay_app.cpp  overlay_app.hpp  resource.h  ring_buffer.cpp  ring_buffer.hpp  user_interface.cpp  user_interface.hpp
src/openvr_overlay/contact_glove/: calibration.cpp  calibration.hpp  cobs.cpp  cobs.hpp  contact_glove_structs.hpp  crc.cpp  crc.hpp  serial_communication.cpp  serial_communication.hpp
